manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: asset-service
  namespace: it-asset
spec:
  selector:
    app: asset-service
  ports:
    - port: 80
      targetPort: 8081
