manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-asset-ingress
  namespace: it-asset
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # appgw.ingress.kubernetes.io/appgw-ssl-certificate: "wildcard-sikshasathi-tech"
spec:
  rules:
    - host: asset.megcloud.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asset-service
                port:
                  number: 80
